IMC-1521: fix Collapsed sidebar on dashboard (#420)
Background doesn't collapse

--- a/client/app/components/SideNav/SideNav.scss
+++ b/client/app/components/SideNav/SideNav.scss
@@ -72,4 +72,7 @@
     z-index: 50;
   }
 
+  .links_container { 
+    width: 100%;
+  }
 }
